fixed scheme collection header spacing

--- a/sites/all/themes/asb/sass/views-styles.scss
+++ b/sites/all/themes/asb/sass/views-styles.scss
@@ -63,8 +63,8 @@ $needs: sprite-map("needs/*.png", $my-needs-position: 2 0);
     background: $odd-backdrop;
   }
   h2.block-title {
-    padding-right: 10px;
-    padding-left: 10px;
+    // padding-right: 10px;
+    // padding-left: 10px;
   }
 
   .view-content{
@@ -93,7 +93,7 @@ $needs: sprite-map("needs/*.png", $my-needs-position: 2 0);
         font-family: $font-body;
         font-weight: bold;
         text-transform: none;
-        line-height: $base-line-height;
+        // line-height: $base-line-height;
         font-size: $h4-font-size + 1;
         margin: 0;
       }
@@ -106,6 +106,20 @@ $needs: sprite-map("needs/*.png", $my-needs-position: 2 0);
         margin: 5px 0 12px 0;
       }
       .scheme-info {
+        h4 {
+          padding-bottom: 4px;
+          margin-bottom: 4px;
+          line-height: inherit;
+          font-family: $font-body;
+          text-transform: uppercase;
+          color: $text-color-secondary;
+          font-size: $h5-font-size;
+          border: {
+            bottom: {
+              @include standard-border($rules-color);
+            }
+          }
+        }
         ul.scheme-needs {
           padding: 0 0 20px 0;
           margin: 0;
